@@ -852,7 +852,10 @@ Release 0.19.0 - Unreleased
     retries for fetching map-outputs; also fixed the case where the reducer
     automatically kills on too many unique map-outputs could not be fetched
     for small jobs. (Amareshwari Sri Ramadasu via acmurthy)  
-    
+
+    HADOOP-4163. Report FSErrors from map output fetch threads instead of
+    merely logging them. (Sharad Agarwal via cdouglas)
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
